# calyx

./: CMakeLists.txt  project_configs.cmake
include/: context.h  interaction.h  life_cycle.h
include/calyx/: context.h  event_defs.h  events.h  life_cycle.h  memory.h
include/calyx/platform/android/: entry_point.h  event_defs.h  system.h
include/calyx/platform/windows/: event_defs.h  system.h
include/platform/android/: entry_point.h  system.h
include/platform/windows/: event_defs.h  system.h
src/: context.cpp  life_cycle.cpp  memory.cpp
src/platform/android/: entry_point.cpp  system.cpp
src/platform/windows/: entry_point.cpp  system.cpp
